--- a/ContentPOVs.csproj
+++ b/ContentPOVs.csproj
@@ -67,7 +67,7 @@
   </ItemGroup>
 
   <!-- CI-Specific References -->
-  <ItemGroup Condition="$(CI) == 'true'">
+  <ItemGroup Condition="$(CI) != 'true'">
     <Reference Include="Assembly-CSharp">
       <HintPath>..\Content Warning_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
