--- a/ContentPOVs.csproj
+++ b/ContentPOVs.csproj
@@ -73,7 +73,7 @@
     </Reference>
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(CI) == 'true'">
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(CI) != 'true'">
     <Exec Command="@Echo Off&#xD;&#xA;SETLOCAL EnableExtensions&#xD;&#xA;set EXE=Content Warning.exe&#xD;&#xA;Set &quot;DIR=&quot;&#xD;&#xA;For /F &quot;Tokens=1,2*&quot; %25%25A In ('Reg Query HKCU\SOFTWARE\Valve\Steam') Do (&#xD;&#xA;    If &quot;%25%25A&quot; Equ &quot;SteamPath&quot; Set &quot;DIR=%25%25C\steamapps\common\Content Warning\&quot;)&#xD;&#xA;If Not Defined DIR echo Couldn't find Content Warning. Cannot auto-install mod. &amp;&amp; Exit/B&#xD;&#xA;If Not Exist &quot;%25DIR%25&quot; echo Couldn't find Content Warning. Cannot auto-install mod. &amp;&amp; Exit/B&#xD;&#xA;set MODS=%25DIR%25\BepInEx\Plugins&#xD;&#xA;set DLL=com.gingerphoenix10.POVs.dll&#xD;&#xA;FOR /F %25%25x IN (&quot;%25EXE%25&quot;) do set EXE_=%25%25x&#xD;&#xA;FOR /F %25%25x IN ('tasklist /NH /FI &quot;IMAGENAME eq %25EXE%25&quot;') DO IF %25%25x == %25EXE_%25 (&#xD;&#xA;  taskkill /F /IM &quot;%25EXE%25&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;if exist &quot;%25MODS%25\%25DLL%25&quot; (&#xD;&#xA;  del &quot;%25MODS%25\%25DLL%25&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;copy &quot;$(TargetPath)&quot; &quot;%25MODS%25&quot;&#xD;&#xA;:loop&#xD;&#xA;if exist &quot;%25MODS%25\%25DLL%25&quot; (&#xD;&#xA;  cd &quot;%25DIR%25&quot;&#xD;&#xA;  ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;  start &quot;&quot; /b &quot;%25EXE%25&quot;&#xD;&#xA;  exit /b 0&#xD;&#xA;) else (&#xD;&#xA;  goto loop&#xD;&#xA;)" />
   </Target>
 </Project>
