--- a/ContentPOVs.csproj
+++ b/ContentPOVs.csproj
@@ -13,6 +13,8 @@
       https://nuget.samboy.dev/v3/index.json
     </RestoreAdditionalProjectSources>
     <RootNamespace>ContentPOVs</RootNamespace>
+
+    <ContentWarningPath>D:\Steam\steamapps\common\Content Warning\</ContentWarningPath>
   </PropertyGroup>
 
   <!-- Package References - Standard Libraries -->
@@ -28,47 +30,50 @@
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
   </ItemGroup>
 
-  <!-- Local References in ./libs folder -->
+  <!-- Local References using ContentWarningPath -->
   <ItemGroup>
-    <Reference Include="com.rlabrecque.steamworks.net">
-      <HintPath>..\Content Warning_Data\Managed\com.rlabrecque.steamworks.net.dll</HintPath>
-    </Reference>
     <Reference Include="MyceliumNetworkingForCW">
-      <HintPath>.\libs\MyceliumNetworking\MyceliumNetworkingForCW.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\MyceliumNetworkingForCW.dll</HintPath>
     </Reference>
     <Reference Include="Photon3Unity3D">
-      <HintPath>.\libs\Photon3Unity3D.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Photon3Unity3D.dll</HintPath>
     </Reference>
     <Reference Include="PhotonRealtime">
-      <HintPath>.\libs\PhotonRealtime.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\PhotonRealtime.dll</HintPath>
     </Reference>
     <Reference Include="PhotonUnityNetworking">
-      <HintPath>.\libs\PhotonUnityNetworking.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\PhotonUnityNetworking.dll</HintPath>
     </Reference>
     <Reference Include="RedstoneWizard08.ConfigurableWarning">
-      <HintPath>.\libs\RedstoneWizard08.ConfigurableWarning.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\RedstoneWizard08.ConfigurableWarning.dll</HintPath>
     </Reference>
     <Reference Include="ShopUtils">
-      <HintPath>.\libs\ShopUtils.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\ShopUtils.dll</HintPath>
     </Reference>
     <Reference Include="Sirenix.Serialization">
-      <HintPath>.\libs\Sirenix.Serialization.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Sirenix.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>.\libs\Unity.TextMeshPro.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Zorro.Core.Runtime">
-      <HintPath>.\libs\Zorro.Core.Runtime.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Zorro.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Zorro.Settings.Runtime">
-      <HintPath>.\libs\Zorro.Settings.Runtime.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Zorro.Settings.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
 
   <!-- CI-Specific References -->
   <ItemGroup Condition="$(CI) != 'true'">
+    <Reference Include="com.rlabrecque.steamworks.net">
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\com.rlabrecque.steamworks.net.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\Content Warning_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>$(ContentWarningPath)Content Warning_Data\Managed\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
 
@@ -77,6 +82,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(CI) != 'true'">
-    <Exec Command="@Echo Off&#xD;&#xA;SETLOCAL EnableExtensions&#xD;&#xA;set EXE=Content Warning.exe&#xD;&#xA;Set &quot;DIR=&quot;&#xD;&#xA;For /F &quot;Tokens=1,2*&quot; %25%25A In ('Reg Query HKCU\SOFTWARE\Valve\Steam') Do (&#xD;&#xA;    If &quot;%25%25A&quot; Equ &quot;SteamPath&quot; Set &quot;DIR=%25%25C\steamapps\common\Content Warning\&quot;)&#xD;&#xA;If Not Defined DIR echo Couldn't find Content Warning. Cannot auto-install mod. &amp;&amp; Exit/B&#xD;&#xA;If Not Exist &quot;%25DIR%25&quot; echo Couldn't find Content Warning. Cannot auto-install mod. &amp;&amp; Exit/B&#xD;&#xA;set MODS=%25DIR%25\BepInEx\Plugins&#xD;&#xA;set DLL=com.gingerphoenix10.POVs.dll&#xD;&#xA;FOR /F %25%25x IN (&quot;%25EXE%25&quot;) do set EXE_=%25%25x&#xD;&#xA;FOR /F %25%25x IN ('tasklist /NH /FI &quot;IMAGENAME eq %25EXE%25&quot;') DO IF %25%25x == %25EXE_%25 (&#xD;&#xA;  taskkill /F /IM &quot;%25EXE%25&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;if exist &quot;%25MODS%25\%25DLL%25&quot; (&#xD;&#xA;  del &quot;%25MODS%25\%25DLL%25&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;copy &quot;$(TargetPath)&quot; &quot;%25MODS%25&quot;&#xD;&#xA;:loop&#xD;&#xA;if exist &quot;%25MODS%25\%25DLL%25&quot; (&#xD;&#xA;  cd &quot;%25DIR%25&quot;&#xD;&#xA;  ping 127.0.0.1 -n 2 &gt; nul&#xD;&#xA;  start &quot;&quot; /b &quot;%25EXE%25&quot;&#xD;&#xA;  exit /b 0&#xD;&#xA;) else (&#xD;&#xA;  goto loop&#xD;&#xA;)" />
+    <Exec Command="@Echo Off&#xD;&#xA;SETLOCAL EnableExtensions&#xD;&#xA;set EXE=Content Warning.exe&#xD;&#xA;set DIR=%ContentWarningPath%Content Warning\steamapps\common\Content Warning&#xD;&#xA;If Not Exist &quot;%DIR%&quot; echo Couldn't find Content Warning. Cannot auto-install mod. &amp;&amp; Exit/B&#xD;&#xA;set MODS=%DIR%\BepInEx\Plugins&#xD;&#xA;set DLL=com.gingerphoenix10.POVs.dll&#xD;&#xA;FOR /F %%x IN ('tasklist /NH /FI &quot;IMAGENAME eq %EXE%&quot;') DO IF %%x == %EXE% (&#xD;&#xA;  taskkill /F /IM &quot;%EXE%&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 > nul&#xD;&#xA;if exist &quot;%MODS%\%DLL%&quot; (&#xD;&#xA;  del &quot;%MODS%\%DLL%&quot;&#xD;&#xA;)&#xD;&#xA;ping 127.0.0.1 -n 2 > nul&#xD;&#xA;copy &quot;$(TargetPath)&quot; &quot;%MODS%&quot;&#xD;&#xA;:loop&#xD;&#xA;if exist &quot;%MODS%\%DLL%&quot; (&#xD;&#xA;  cd &quot;%DIR%&quot;&#xD;&#xA;  ping 127.0.0.1 -n 2 > nul&#xD;&#xA;  start &quot;&quot; /b &quot;%EXE%&quot;&#xD;&#xA;  exit /b 0&#xD;&#xA;) else (&#xD;&#xA;  goto loop&#xD;&#xA;)" />
   </Target>
+
 </Project>
