Move com.gingerphoenix10.povs.dll autoinstall back to BepInEx/Plugins/

--- a/ContentPOVs.csproj
+++ b/ContentPOVs.csproj
@@ -66,6 +66,6 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(CI) != 'true'">
-    <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(CWDir)\BepInEx\Plugins\$(AssemblyName)" />
+    <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="$(CWDir)\BepInEx\Plugins" />
   </Target>
 </Project>
