--- a/ContentPOVs.csproj
+++ b/ContentPOVs.csproj
@@ -10,60 +10,20 @@
     </PropertyGroup>
 
     <ItemGroup Condition="$(CI) != 'true'">
-        <Reference Include="com.rlabrecque.steamworks.net">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\com.rlabrecque.steamworks.net.dll</HintPath>
-        </Reference>
-        <Reference Include="mscorlib">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\mscorlib.dll</HintPath>
-        </Reference>
-        <Reference Include="netstandard">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\netstandard.dll</HintPath>
-        </Reference>
-        <Reference Include="Photon3Unity3D">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\Photon3Unity3D.dll</HintPath>
-        </Reference>
-        <Reference Include="PhotonRealtime">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\PhotonRealtime.dll</HintPath>
-        </Reference>
-        <Reference Include="PhotonUnityNetworking">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\PhotonUnityNetworking.dll</HintPath>
-        </Reference>
-        <Reference Include="Unity.TextMeshPro">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\Unity.TextMeshPro.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.CoreModule">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-        </Reference>
-        <Reference Include="Unity.Mathematics">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\Unity.Mathematics.dll</HintPath>
-        </Reference>
-        <Reference Include="Assembly-CSharp">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\Assembly-CSharp.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.UI">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.UI.dll</HintPath>
-        </Reference>
-        <Reference Include="UnityEngine.UIModule">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\UnityEngine.UIModule.dll</HintPath>
-        </Reference>
-        <Reference Include="Zorro.Core.Runtime">
-          <HintPath>$(CWDir)\Content Warning_Data\Managed\Zorro.Core.Runtime.dll</HintPath>
-        </Reference>
-        <Reference Include="Zorro.Settings.Runtime">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\Zorro.Settings.Runtime.dll</HintPath>
-        </Reference>
-        <Reference Include="0Harmony">
-            <HintPath>$(CWDir)\Content Warning_Data\Managed\0Harmony.dll</HintPath>
-        </Reference>
+        <Reference Include="$(CWDir)\Content Warning_Data\Managed\Assembly-CSharp*.dll" Private="false" Publicize="True"/>
+        <Reference Include="$(CWDir)\Content Warning_Data\Managed\*.dll" Private="false" Exclude="$(CWDir)\Content Warning_Data\Managed\Assembly-CSharp*.dll"/>
     </ItemGroup>
     <ItemGroup Condition="$(CI) == 'true'">
         <PackageReference Include="MaxWasUnavailable.ContentWarning.Libs" Version="*-*" PrivateAssets="all" />
     </ItemGroup>
+
     <ItemGroup>
-      <Reference Include="System.Core">
-        <HintPath>..\..\Lethal Company\Lethal Company_Data\Managed\System.Core.dll</HintPath>
-      </Reference>
+      <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
+
     <Target Name="CopyOutputFileToGame" AfterTargets="Build">
         <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll;preview.png" DestinationFolder="$(CWDir)\Plugins\$(AssemblyName)" />
     </Target>
